--- a/week-2/package.json
+++ b/week-2/package.json
@@ -12,5 +12,8 @@
   "type": "commonjs",
   "devDependencies": {
     "jest": "^30.2.0"
+  },
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
   }
 }
